--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ tao = "0.18" # window manager and event loop
 tray-icon = "0.4" # system tray
 image = "0.24" # icon image manipulation
 global-hotkey = "0.1"
+async-std = "1.12"
+libc = "0.2"
 # notify-rust = "4" # system notifications
 
 [target.'cfg(target_os = "macos")'.dependencies]
