refactoring popup ui with cocoa

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ image = "0.24" # icon image manipulation
 global-hotkey = "0.1"
 async-std = "1.12"
 libc = "0.2"
+kas = "0.13"
 # notify-rust = "4" # system notifications
 
 [target.'cfg(target_os = "macos")'.dependencies]
